--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:theme="@style/Theme.MyNewsMVVMCleanArch"
         tools:targetApi="31">
         <activity
-            android:name=".ui.PaginationTopHeadlineActivity"
+            android:name=".ui.topheadline.TopHeadlineActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.pagination.PaginationTopHeadlineActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
