--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.MyNewsMVVMCleanArch"
         tools:targetApi="31">
         <activity
+            android:name=".ui.search.SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.topheadline.TopHeadlineActivity"
             android:exported="false" />
         <activity
